Oppdatert CSS klassen .a-iconStrikeThrough med overflow-wrap for fiks av strek over operasjonsikon som ikke er "deselected" (Bug 47675)

--- a/source/css/scss-common/base/_global-classes.scss
+++ b/source/css/scss-common/base/_global-classes.scss
@@ -462,6 +462,7 @@ hr {
 
 .a-iconStrikeThrough {
   padding-left: 3px;
+  overflow-wrap: normal;
 
   &::after {
     position: relative;
